// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Property /> should render only title 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Звонки на все номера России
      </Header>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render several rows 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item mfui-beta-property__item_multirow"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Абонентская плата:
      </Header>
    </div>
  </div>
  <div
    className="mfui-beta-property__item mfui-beta-property__item_multirow"
    key="1"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          value={
            Array [
              "Звонки на все номера России",
            ]
          }
        />
      </div>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
  <div
    className="mfui-beta-property__item mfui-beta-property__item_multirow"
    key="2"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          value={
            Array [
              "Звонки на все номера России",
            ]
          }
        />
      </div>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
  <div
    className="mfui-beta-property__item mfui-beta-property__item_multirow"
    key="3"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          value={
            Array [
              "Звонки на все номера России",
            ]
          }
        />
      </div>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render title and description 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Интернет на все сервисы
      </Header>
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          value={
            Array [
              "Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка",
            ]
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Property /> should render title and description in several rows 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Интернет на все сервисы
      </Header>
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          value={
            Array [
              "Boom, Yandex.Музыка, Zvooq, ВКонтакте Музыка",
              "Google Play Music, Apple Music, онлайн радио.",
            ]
          }
        />
      </div>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render title and hidden description 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Музыкальные сервисы
      </Header>
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          isCollapsible={true}
          value={
            Array [
              "Звонки на местные городские номера, когда вы находитесь дома,",
              "оплачиваются отдельно.",
            ]
          }
        />
      </div>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render title in several row 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Детализация в салонах МегаФона
      </Header>
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="1"
      >
        Оплачивается каждый день заказанной детализации.
      </Header>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      2ГБ
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render with badge 1`] = `
<div
  className="mfui-beta-property"
>
  <span
    className="mfui-beta-property__badge"
  >
    Акция
  </span>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Звонки на все номера России
      </Header>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render with border bottom 1`] = `
<div
  className="mfui-beta-property mfui-beta-property_border-bottom"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Звонки на все номера России
      </Header>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render with icon 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        <div
          className="mfui-beta-property__icon"
        >
          <test-file-stub
            style={
              Object {
                "display": "block",
                "fill": "#00B956",
              }
            }
          />
        </div>
        Интернет на все сервисы
      </Header>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render with links 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Тарифы 
        <a
          href="https://moscow.megafon.ru"
          key="1"
        >
          Включайся!
        </a>
        , с которыми работает опция
      </Header>
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          value={
            Array [
              "<a href=\\"https://moscow.megafon.ru\\">Выбирай, Смотри, Слушай, Говори, Общайся</a>",
            ]
          }
        />
      </div>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500 ₽
    </Header>
  </div>
</div>
`;

exports[`<Property /> should render with several descriptions 1`] = `
<div
  className="mfui-beta-property"
>
  <div
    className="mfui-beta-property__item"
    key="0"
  >
    <div
      className="mfui-beta-property__inner"
    >
      <Header
        as="h5"
        color="black"
        hAlign="inherit"
        key="0"
      >
        Доп звонки
      </Header>
      <div
        className="mfui-beta-property__desc"
        key="0"
      >
        <PropertyDescription
          value={
            Array [
              "После израсходования пакета минут звонки на номера МегаФона России предоставляются безлимитно.",
            ]
          }
        />
      </div>
      <div
        className="mfui-beta-property__desc"
        key="1"
      >
        <PropertyDescription
          isCollapsible={true}
          value={
            Array [
              "Звонки на местные городские номера, когда вы находитесь дома, оплачиваются отдельно.",
            ]
          }
        />
      </div>
    </div>
    <Header
      as="h3"
      className="mfui-beta-property__value"
      color="black"
      hAlign="inherit"
    >
      500Р
    </Header>
  </div>
</div>
`;
